# rullama-framework

./: .deny-grep.toml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  PUBLISHING.md  README.md  TESTING.md  rust-toolchain.toml
crates/brainwires-a2a/: Cargo.toml  README.md
crates/brainwires-a2a/tests/: server_features.rs
crates/brainwires-agent/: Cargo.toml  README.md
crates/brainwires-agent/examples/: contract_net.rs  optimistic_concurrency.rs  saga_compensation.rs  task_queue_scheduling.rs  three_state_model.rs  workflow_dag.rs
crates/brainwires-agent/src/: agent_tools.rs  file_locks.rs  lib.rs  optimistic.rs  otel.rs  personas.rs  resource_locks.rs  roles.rs  saga.rs  task_queue.rs  workflow.rs
crates/brainwires-agent/tests/: communication_hub.rs  coordination_patterns.rs  file_lock_coordination.rs  task_lifecycle.rs
crates/brainwires-call-policy/: Cargo.toml  README.md
crates/brainwires-call-policy/src/: budget.rs  cache.rs  circuit.rs  classify.rs  error.rs  failover.rs  lib.rs  retry.rs  tests_util.rs  tokenizer.rs
crates/brainwires-call-policy/tests/: integration.rs  retry_deadline.rs
crates/brainwires-core/: Cargo.toml  README.md
crates/brainwires-core/src/: event.rs  file_context.rs  lib.rs  message.rs  paths.rs  permission.rs  provider.rs  tool.rs  workflow_state.rs  working_set.rs
crates/brainwires-core/tests/: generate_fixtures.rs
crates/brainwires-eval/: Cargo.toml  README.md
crates/brainwires-eval/src/: case.rs  fault_report.rs  lib.rs  ranking_metrics.rs  regression.rs  stability_tests.rs  suite.rs  trial.rs
crates/brainwires-eval/tests/: fixtures_suite.rs
crates/brainwires-finetune/: Cargo.toml  README.md
crates/brainwires-finetune/examples/: cloud_finetune.rs
crates/brainwires-finetune/src/: error.rs  lib.rs  manager.rs
crates/brainwires-hardware/: Cargo.toml  README.md
crates/brainwires-hardware/examples/: play_audio.rs
crates/brainwires-hardware/src/: lib.rs
crates/brainwires-inference/: Cargo.toml  README.md
crates/brainwires-inference/examples/: agent_pool.rs  cycle_orchestrator.rs  planner_judge_parsing.rs  validation_loop.rs
crates/brainwires-inference/src/: agent_hooks.rs  builder.rs  chat_agent.rs  context.rs  cycle_orchestrator.rs  judge_agent.rs  lib.rs  plan_executor.rs  planner_agent.rs  pool.rs  runtime.rs  summarization.rs  task_orchestrator.rs  validation_agent.rs  validation_loop.rs  validator_agent.rs
crates/brainwires-inference/tests/: parallel_tools.rs  summarization.rs  validation.rs
crates/brainwires-knowledge/: Cargo.toml  README.md
crates/brainwires-knowledge/src/: lib.rs
crates/brainwires-knowledge/tests/: tenant_scoping.rs
crates/brainwires-llama/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/brainwires-llama/src/: api.rs  error.rs  lib.rs
crates/brainwires-mcp-client/: Cargo.toml  README.md
crates/brainwires-mcp-client/examples/: mcp_client.rs
crates/brainwires-mcp-client/src/: client.rs  config.rs  lib.rs  types.rs
crates/brainwires-mcp-client/tests/: jsonrpc_roundtrip.rs  stdio_transport.rs
crates/brainwires-mcp-server/: Cargo.toml  README.md
crates/brainwires-mcp-server/examples/: hello_world_server.rs  mcp_server.rs  middleware_chain.rs
crates/brainwires-mcp-server/src/: error.rs  handler.rs  http_transport.rs  registry.rs  server.rs
crates/brainwires-mcp-server/tests/: middleware_pipeline.rs  tool_registry.rs
crates/brainwires-mdap/: Cargo.toml  README.md
crates/brainwires-mdap/examples/: task_decomposition.rs  voting_consensus.rs
crates/brainwires-mdap/src/: composer.rs  lib.rs  metrics.rs  microagent.rs  red_flags.rs  scaling.rs  tool_intent.rs  voting.rs
crates/brainwires-memory/: Cargo.toml  README.md
crates/brainwires-memory/examples/: tiered_memory.rs
crates/brainwires-memory/src/: lib.rs  tiered_memory.rs
crates/brainwires-network/: Cargo.toml  README.md
crates/brainwires-network/examples/: host_discovery.rs  network_interfaces.rs  port_scan.rs
crates/brainwires-network/src/: lib.rs  manager.rs  network_error.rs
crates/brainwires-network/tests/: discovery_and_identity.rs  envelope_serde.rs  network_manager.rs  routing_integration.rs
crates/brainwires-permission/: Cargo.toml  README.md
crates/brainwires-permission/examples/: policy_engine.rs  trust_audit.rs
crates/brainwires-permission/src/: approval.rs  audit.rs  config.rs  lib.rs  policy.rs  profiles.rs  trust.rs
crates/brainwires-permission/tests/: audit_durability.rs  policy_matching.rs  wildcard_domains.rs
crates/brainwires-prompting/: Cargo.toml  README.md
crates/brainwires-prompting/examples/: prompting_techniques.rs
crates/brainwires-prompting/src/: clustering.rs  lib.rs  (+6 more)
crates/brainwires-provider/: Cargo.toml  README.md
crates/brainwires-provider-speech/: Cargo.toml  README.md
crates/brainwires-rag/: Cargo.toml  README.md
crates/brainwires-reasoning/: Cargo.toml  README.md
crates/brainwires-sandbox/: Cargo.toml  README.md
crates/brainwires-sandbox-proxy/: Cargo.toml  Dockerfile  README.md
crates/brainwires-seal/: Cargo.toml  README.md
crates/brainwires-skills/: Cargo.toml  README.md
crates/brainwires-storage/: Cargo.toml  README.md
engine/: Cargo.toml  README.md  rust-toolchain.toml
engine/brainwires-engine/: Cargo.toml
engine/brainwires-lora/: Cargo.toml  README.md
engine/rullama-engine/: Cargo.toml  README.md
engine/rullama-lora/: Cargo.toml  README.md
engine/scripts/: convert-kokoro-gguf.py  convert-styletts2-gguf.py  finetune-crash-bisect.sh  finetune-eval.sh  kokoro_dump_fixtures.py  memit-eval.sh  publish.sh  rome-eval-cov.sh  rome-eval.sh  rome-iterative.sh  styletts2_dump_decoder_fixtures.py  styletts2_dump_diffusion_fixtures.py  styletts2_dump_style_fixtures.py  styletts2_dump_synth_fixtures.py  upload-models-r2.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: a2a_envelope_decoder.rs  mcp_jsonrpc_parser.rs  model_loader_header.rs  skill_manifest.rs
xtask/: Cargo.toml
xtask/src/: fuzz.rs  lint_deps.rs  main.rs  package_count.rs  stubs.rs  test_harness.rs  version.rs
(+2791 files in other folders)
