[workspace]
members = [
    "crates/brainwires-core",
    "crates/brainwires",
    "crates/brainwires-tool-runtime",
    "crates/brainwires-tool-builtins",
    "crates/brainwires-agent",
    "crates/brainwires-storage",
    "crates/brainwires-stores",
    "crates/brainwires-memory",
    "crates/brainwires-mdap",
    "crates/brainwires-skills",
    "crates/brainwires-seal",
    "crates/brainwires-eval",
    "crates/brainwires-inference",
    "crates/brainwires-mcp-client",
    "crates/brainwires-permission",
    "crates/brainwires-sandbox",
    "crates/brainwires-sandbox-proxy",
    "crates/brainwires-network",
    "crates/brainwires-mcp-server",
    "crates/brainwires-a2a",
    "crates/brainwires-provider",
    "crates/brainwires-provider-speech",
    "crates/brainwires-call-policy",
    "crates/brainwires-hardware",
    "crates/brainwires-finetune",
    "crates/brainwires-finetune-local",
    "crates/brainwires-training",
    "extras/brainwires-autonomy",
    "extras/brainwires-chat-pwa/home",
    "extras/brainwires-chat-pwa/wasm",
    "extras/brainwires-wasm",
    "crates/brainwires-knowledge",
    "crates/brainwires-prompting",
    "crates/brainwires-rag",
    "crates/brainwires-reasoning",

    "crates/brainwires-telemetry",
    "extras/brainwires-billing",
    "extras/brainwires-memory-server",
    "extras/brainwires-scheduler",
    "extras/brainwires-proxy",
    "extras/brainwires-brain-server",
    "extras/brainwires-rag-server",
    "extras/brainwires-issues",
    "extras/reload-daemon",
    "extras/agent-chat",
    "extras/brainwires-cli",
    "extras/audio-demo-ffi",
    "extras/brainwires-chat-native/bridge",
    "extras/voice-assistant",
    "extras/matter-tool",
    "extras/claude-brain",
    "xtask",
]
exclude = [
    "deprecated/brainwires-audio",
    "deprecated/brainwires-brain",
    "deprecated/brainwires-mesh",
    "deprecated/brainwires-prompting",
    "deprecated/brainwires-rag",
    "deprecated/brainwires-cognition",
    "deprecated/brainwires-channels",
    "deprecated/brainwires-system",
    "deprecated/brainwires-code-interpreters",
    "deprecated/brainwires-wasm",
    "deprecated/brainwires-relay",
    "deprecated/brainwires-tool-system",
    "deprecated/brainwires-tools",
    "deprecated/brainwires-permissions",
    "deprecated/brainwires-providers",
    "deprecated/brainwires-mcp",
    "deprecated/brainwires-agent-network",
    "deprecated/brainwires-agents",
    "deprecated/brainwires-datasets",
    "extras/brainclaw",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"
repository = "https://github.com/Brainwires/brainwires-framework"
homepage = "https://github.com/Brainwires/brainwires-framework"
authors = ["Brainwires"]
keywords = ["ai-agents", "llm", "mcp", "multi-agent", "framework"]
categories = ["development-tools", "science::robotics"]
readme = "README.md"
documentation = "https://docs.rs/brainwires"

[workspace.dependencies]
# Internal crates
brainwires-core = { path = "crates/brainwires-core", version = "0.11.0", default-features = false }
brainwires-tool-runtime = { path = "crates/brainwires-tool-runtime", version = "0.11.0", default-features = false }
brainwires-tool-builtins = { path = "crates/brainwires-tool-builtins", version = "0.11.0", default-features = false }
brainwires-agent = { path = "crates/brainwires-agent", version = "0.11.0", default-features = false }
brainwires-storage = { path = "crates/brainwires-storage", version = "0.11.0", default-features = false }
brainwires-stores = { path = "crates/brainwires-stores", version = "0.11.0", default-features = false }
brainwires-memory = { path = "crates/brainwires-memory", version = "0.11.0" }
brainwires-mdap = { path = "crates/brainwires-mdap", version = "0.11.0" }
brainwires-skills = { path = "crates/brainwires-skills", version = "0.11.0" }
brainwires-seal = { path = "crates/brainwires-seal", version = "0.11.0", default-features = false }
brainwires-eval = { path = "crates/brainwires-eval", version = "0.11.0" }
brainwires-inference = { path = "crates/brainwires-inference", version = "0.11.0", default-features = false }
brainwires-mcp-client = { path = "crates/brainwires-mcp-client", version = "0.11.0" }
brainwires-permission = { path = "crates/brainwires-permission", version = "0.11.0" }
brainwires-sandbox = { path = "crates/brainwires-sandbox", version = "0.11.0", default-features = false }
brainwires-network = { path = "crates/brainwires-network", version = "0.11.0" }
brainwires-mcp-server = { path = "crates/brainwires-mcp-server", version = "0.11.0" }
brainwires-a2a = { path = "crates/brainwires-a2a", version = "0.11.0", default-features = false }
brainwires-provider = { path = "crates/brainwires-provider", version = "0.11.0", default-features = false, features = ["native"] }
brainwires-provider-speech = { path = "crates/brainwires-provider-speech", version = "0.11.0", default-features = false }
brainwires-call-policy = { path = "crates/brainwires-call-policy", version = "0.11.0", default-features = false }
brainwires-hardware = { path = "crates/brainwires-hardware", version = "0.11.0" }
brainwires-finetune = { path = "crates/brainwires-finetune", version = "0.11.0" }
brainwires-finetune-local = { path = "crates/brainwires-finetune-local", version = "0.11.0" }
brainwires-training = { path = "crates/brainwires-training", version = "0.11.0" }
brainwires-knowledge = { path = "crates/brainwires-knowledge", version = "0.11.0", default-features = false }
brainwires-rag = { path = "crates/brainwires-rag", version = "0.11.0", default-features = false }
brainwires-prompting = { path = "crates/brainwires-prompting", version = "0.11.0", default-features = false }
brainwires-reasoning = { path = "crates/brainwires-reasoning", version = "0.11.0" }
brainwires-telemetry  = { path = "crates/brainwires-telemetry",  version = "0.11.0", default-features = false }
# `brainwires-autonomy` and `brainwires-proxy` live in `extras/`. They are
# workspace-only (publish = false) and no `crates/` member depends on them, so
# they intentionally do NOT appear in [workspace.dependencies] — that table is
# the API surface of the framework. See ADR-0004 (framework / extras boundary)
# and `cargo xtask lint-deps`.

# Tokenizer dependencies
tokenizers = "0.22"
tiktoken-rs = "0.9"

# ML training framework — individual crates to avoid cubecl-cpu (links = "lzma" conflict
# with xz2 from datafusion/lancedb). Using individual crates instead of umbrella `burn`.
burn-core = { version = "0.20", default-features = false, features = ["std"] }
burn-nn = { version = "0.20", default-features = false, features = ["std"] }
burn-optim = { version = "0.20", default-features = false, features = ["std"] }
burn-autodiff = { version = "0.20", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.20", default-features = false, features = ["std", "autotune"] }
burn-ndarray = { version = "0.20", default-features = false, features = ["std"] }

# Home automation serial protocols
tokio-serial = "5.4"
# CRC calculations (Zigbee EZSP/ASH CRC-16-CCITT)
crc = "3"
# mDNS service discovery (Matter device/controller discovery)
mdns-sd = "0.12"

# Async runtime & utilities
tokio = { version = "1.43" }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"

# MCP protocol
rmcp = { version = "1.1", features = ["client", "server", "client-side-sse", "transport-child-process", "transport-io", "macros"] }

# MCP server support
schemars = "1.0"
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vector database & columnar storage
lancedb = "0.27"
arrow = "57"
arrow-array = "57"
arrow-schema = "57"

# Embeddings
fastembed = "5.1"

# Caching
lru = "0.16"

# Semantic versioning
semver = { version = "1", features = ["serde"] }

# Hashing
sha2 = "0.10"

# SQLite
rusqlite = { version = "0.38", features = ["bundled"] }

# File operations
walkdir = "2.5"
diffy = "0.4"
glob = "0.3"

# Code search
regex = "1"
ignore = "0.4"

# URL encoding
urlencoding = "2"

# Filesystem paths
dirs = "6"

# Git
git2 = "0.20"

# Security
zeroize = { version = "1", features = ["derive"] }

# Config parsing
toml = "1.0"

# ML / Clustering
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# Bitflags
bitflags = "2"

# Binary encoding
bincode = { version = "2", features = ["serde"] }

# Crypto
chacha20poly1305 = "0.10"
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
hex = "0.4"
subtle = "2.6"
p256    = { version = "0.13.2", features = ["ecdh", "ecdsa", "arithmetic"] }
ecdsa   = { version = "0.16.9", features = ["der", "signing", "verifying"] }
hmac    = "0.12.1"
hkdf    = "0.12.4"
pbkdf2  = { version = "0.12.2", features = ["hmac"] }
aes     = "0.8.4"
ccm     = { version = "0.5.0", features = ["std"] }
der     = { version = "0.8.0", features = ["alloc", "derive"] }
pkcs8   = { version = "0.10.2", features = ["alloc"] }

# Keyring (secure key storage)
keyring = "3"

# Concurrent maps
dashmap = "6"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Discord API
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend", "chrono"] }

# Telegram Bot API
teloxide = { version = "0.13", features = ["macros"] }

# URL parsing
url = "2.5"

# Hostname
gethostname = "1.0"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Local LLM inference (optional)
llama-cpp-2 = "0.1"

# AWS SDK (Bedrock auth)
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"

# GCP auth (Vertex AI)
gcp_auth = "0.12"

# HTTP (hyper ecosystem)
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http = "1.1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# gRPC
tonic = "0.13"
prost = "0.14"
prost-types = "0.14"

# Neo4j Bolt protocol
neo4rs = "0.9.0-rc.9"

# Token decoding (used by llama-cpp-2)
encoding_rs = "0.8"

# Async stream adapters
tokio-stream = "0.1"

# SafeTensors model weight loading
safetensors = "0.7"

# Postgres + pgvector (using tokio-postgres to avoid sqlx's libsqlite3-sys conflict)
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
pgvector = { version = "0.4.1", features = ["postgres"] }

# Testing
tempfile = "3"
proptest = "1"

# ── Build profiles ──────────────────────────────────────────────────────────
#
# `dev` and `test` profiles emit minimal debug info (file:line only). Full
# debug info on the knowledge/storage test binaries pulls in lancedb,
# datafusion, arrow, tantivy, tree-sitter-*, and image processing, and the
# linker OOMs on stock GitHub Actions runners (signal 7, ld bus error).
# Line tables keep panic stack traces readable without the binary-size
# explosion.
#
# Release builds keep the default (full debug). Override per-crate if a
# specific consumer needs richer debug info.

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

# ── Patches ─────────────────────────────────────────────────────────────────
#
# Redirect `rustpotter` (transitive dep of `brainwires-hardware`'s
# `wake-word-rustpotter` feature) to the Brainwires fork on `candle-0.10`,
# which bumps `candle-core`/`candle-nn` to 0.10 and fixes test tolerances.
# Without this patch, `--all-features` pulls in upstream `rustpotter 3.0.2`
# → `candle-core 0.2.2`, which won't build against the workspace's candle 0.10.
[patch.crates-io]
rustpotter = { git = "https://github.com/Brainwires/rustpotter", rev = "4dbd6fd55a7c198cedb7c5e2574497343fd620a7" }

# candle 0.10.x — patched against the Brainwires fork at v0.10-wgpu.
# Initial branch state is byte-identical to upstream commit 7c7a8c57 ("Bump
# candle version to 0.10.2"), which is the source of crates.io's 0.10.2
# publication (upstream did not cut a `0.10.2` tag). The WebGPU backend
# lands incrementally on this branch in subsequent phases of the
# bright-scroll plan.
candle-core         = { git = "https://github.com/Brainwires/candle", rev = "08c24154" }
candle-nn           = { git = "https://github.com/Brainwires/candle", rev = "08c24154" }
candle-transformers = { git = "https://github.com/Brainwires/candle", rev = "08c24154" }

