[workspace]
members = [
    "crates/rullama-core",
    "crates/rullama",
    "crates/rullama-tool-runtime",
    "crates/rullama-tool-builtins",
    "crates/rullama-agent",
    "crates/rullama-storage",
    "crates/rullama-stores",
    "crates/rullama-memory",
    "crates/rullama-mdap",
    "crates/rullama-skills",
    "crates/rullama-seal",
    "crates/rullama-eval",
    "crates/rullama-inference",
    "crates/rullama-mcp-client",
    "crates/rullama-permission",
    "crates/rullama-sandbox",
    "crates/rullama-sandbox-proxy",
    "crates/rullama-network",
    "crates/rullama-mcp-server",
    "crates/rullama-a2a",
    "crates/rullama-provider",
    "crates/rullama-provider-speech",
    "crates/rullama-call-policy",
    "crates/rullama-hardware",
    "crates/rullama-finetune",
    "crates/rullama-test-fixtures",
    "crates/rullama-test-harness",
    "crates/rullama-datasets",
    "sdks/rullama-autonomy",
    "sdks/rullama-wasm",
    "crates/rullama-knowledge",
    "crates/rullama-prompting",
    "crates/rullama-rag",
    "crates/rullama-reasoning",

    "crates/rullama-telemetry",
    "sdks/rullama-billing",
    "servers/rullama-memory-server",
    "servers/rullama-scheduler",
    "sdks/rullama-proxy",
    "servers/rullama-brain-server",
    "servers/rullama-rag-server",
    "servers/rullama-issues",
    "integrations/reload-daemon",
    "examples/agent-chat",
    "examples/audio-demo-ffi",
    "examples/rullama-chat-native/bridge",
    "examples/voice-assistant",
    "integrations/claude-brain",
    "examples/rullama-web-search-agent",
    "xtask",
]
exclude = [
    "deprecated/brainwires-audio",
    "deprecated/brainwires-brain",
    "deprecated/brainwires-mesh",
    "deprecated/brainwires-prompting",
    "deprecated/brainwires-rag",
    "deprecated/brainwires-cognition",
    "deprecated/brainwires-channels",
    "deprecated/brainwires-system",
    "deprecated/brainwires-code-interpreters",
    "deprecated/brainwires-wasm",
    "deprecated/brainwires-relay",
    "deprecated/brainwires-tool-system",
    "deprecated/brainwires-tools",
    "deprecated/brainwires-permissions",
    "deprecated/brainwires-providers",
    "deprecated/brainwires-mcp",
    "deprecated/brainwires-agent-network",
    "deprecated/brainwires-agents",
    "deprecated/brainwires-datasets",
    # Isolated engine sub-workspace (wgpu + wasm32). Owns its own Cargo.lock so
    # the harness's native build never pulls in wgpu. See engine/Cargo.toml.
    "engine",
    "future",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"
repository = "https://github.com/Brainwires/rullama-framework"
homepage = "https://github.com/Brainwires/rullama-framework"
authors = ["Brainwires"]
keywords = ["ai-agents", "llm", "mcp", "multi-agent", "framework"]
categories = ["development-tools", "science::robotics"]
readme = "README.md"
documentation = "https://docs.rs/rullama"

[workspace.dependencies]
# Internal crates
rullama-core = { path = "crates/rullama-core", version = "0.12.0", default-features = false }
rullama-tool-runtime = { path = "crates/rullama-tool-runtime", version = "0.12.0", default-features = false }
rullama-tool-builtins = { path = "crates/rullama-tool-builtins", version = "0.12.0", default-features = false }
rullama-agent = { path = "crates/rullama-agent", version = "0.12.0", default-features = false }
rullama-storage = { path = "crates/rullama-storage", version = "0.12.0", default-features = false }
rullama-stores = { path = "crates/rullama-stores", version = "0.12.0", default-features = false }
rullama-memory = { path = "crates/rullama-memory", version = "0.12.0" }
rullama-mdap = { path = "crates/rullama-mdap", version = "0.12.0" }
rullama-skills = { path = "crates/rullama-skills", version = "0.12.0" }
rullama-seal = { path = "crates/rullama-seal", version = "0.12.0", default-features = false }
rullama-eval = { path = "crates/rullama-eval", version = "0.12.0" }
rullama-inference = { path = "crates/rullama-inference", version = "0.12.0", default-features = false }
rullama-mcp-client = { path = "crates/rullama-mcp-client", version = "0.12.0" }
rullama-permission = { path = "crates/rullama-permission", version = "0.12.0" }
rullama-sandbox = { path = "crates/rullama-sandbox", version = "0.12.0", default-features = false }
rullama-network = { path = "crates/rullama-network", version = "0.12.0" }
rullama-mcp-server = { path = "crates/rullama-mcp-server", version = "0.12.0" }
rullama-a2a = { path = "crates/rullama-a2a", version = "0.12.0", default-features = false }
rullama-provider = { path = "crates/rullama-provider", version = "0.12.0", default-features = false, features = ["native"] }
rullama-provider-speech = { path = "crates/rullama-provider-speech", version = "0.12.0", default-features = false }
rullama-call-policy = { path = "crates/rullama-call-policy", version = "0.12.0", default-features = false }
rullama-hardware = { path = "crates/rullama-hardware", version = "0.12.0" }
rullama-finetune = { path = "crates/rullama-finetune", version = "0.12.0" }
rullama-datasets = { path = "crates/rullama-datasets", version = "0.12.0", default-features = false }
# `rullama-finetune-local` and `rullama-training` were moved out of this
# framework into the `rullama` workspace (LoRA/QLoRA/DoRA + future
# training-from-scratch live there now). See CHANGELOG [Unreleased].
rullama-knowledge = { path = "crates/rullama-knowledge", version = "0.12.0", default-features = false }
rullama-rag = { path = "crates/rullama-rag", version = "0.12.0", default-features = false }
rullama-prompting = { path = "crates/rullama-prompting", version = "0.12.0", default-features = false }
rullama-reasoning = { path = "crates/rullama-reasoning", version = "0.12.0" }
rullama-telemetry  = { path = "crates/rullama-telemetry",  version = "0.12.0", default-features = false }
# `rullama-autonomy` and `rullama-proxy` live in `sdks/`. They are
# workspace-only (publish = false) and no `crates/` member depends on them, so
# they intentionally do NOT appear in [workspace.dependencies] — that table is
# the API surface of the framework. See ADR-0004 (framework / extras boundary)
# and `cargo xtask lint-deps`.

# Internal test fixtures (publish = false). Consumed only as a dev-dependency
# by `crates/*` test modules; not part of the framework's published API.
# Centralised here to keep dev-dep versions aligned across consumers.
rullama-test-fixtures = { path = "crates/rullama-test-fixtures", version = "0.12.0" }
# Internal test harness (publish = false). Aggregates Tier-A feature cases,
# Tier-B security cases, and Tier-C assembly cases. Consumed by `xtask` and
# by `extras/rullama-autonomy` (which drives the AutonomousFeedbackLoop).
rullama-test-harness = { path = "crates/rullama-test-harness", version = "0.12.0" }

# Tokenizer dependencies
tokenizers = "0.22"
tiktoken-rs = "0.9"

# `burn-*` was used by the deleted `rullama-finetune-local`; the local
# PEFT crate now lives in the `rullama` workspace, where Burn is pinned
# directly. No framework crate depends on Burn anymore.

# Home automation serial protocols
tokio-serial = "5.4"
# CRC calculations (Zigbee EZSP/ASH CRC-16-CCITT)
crc = "3"
# mDNS service discovery (Matter device/controller discovery)
mdns-sd = "0.12"

# Async runtime & utilities
tokio = { version = "1.43" }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"

# MCP protocol
rmcp = { version = "1.1", features = ["client", "server", "client-side-sse", "transport-child-process", "transport-io", "macros"] }

# MCP server support
schemars = "1.0"
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vector database & columnar storage
lancedb = "0.27"
arrow = "57"
arrow-array = "57"
arrow-schema = "57"

# Embeddings
fastembed = "5.1"

# Caching
lru = "0.16"

# Semantic versioning
semver = { version = "1", features = ["serde"] }

# Hashing
sha2 = "0.10"

# SQLite
rusqlite = { version = "0.38", features = ["bundled"] }

# File operations
walkdir = "2.5"
diffy = "0.4"
glob = "0.3"

# Code search
regex = "1"
ignore = "0.4"

# URL encoding
urlencoding = "2"

# Filesystem paths
dirs = "6"

# Git
git2 = "0.20"

# Security
zeroize = { version = "1", features = ["derive"] }

# Config parsing
toml = "1.0"
inventory = "0.3"

# ML / Clustering
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# Bitflags
bitflags = "2"

# Binary encoding
bincode = { version = "2", features = ["serde"] }

# Crypto
chacha20poly1305 = "0.10"
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
hex = "0.4"
subtle = "2.6"
p256    = { version = "0.13.2", features = ["ecdh", "ecdsa", "arithmetic"] }
ecdsa   = { version = "0.16.9", features = ["der", "signing", "verifying"] }
hmac    = "0.12.1"
hkdf    = "0.12.4"
pbkdf2  = { version = "0.12.2", features = ["hmac"] }
aes     = "0.8.4"
ccm     = { version = "0.5.0", features = ["std"] }
der     = { version = "0.8.0", features = ["alloc", "derive"] }
pkcs8   = { version = "0.10.2", features = ["alloc"] }

# Keyring (secure key storage)
keyring = "3"

# Concurrent maps
dashmap = "6"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Discord API
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend", "chrono"] }

# Telegram Bot API
teloxide = { version = "0.13", features = ["macros"] }

# URL parsing
url = "2.5"

# Hostname
gethostname = "1.0"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Local LLM inference (optional)
llama-cpp-2 = "0.1"

# AWS SDK (Bedrock auth)
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"

# GCP auth (Vertex AI)
gcp_auth = "0.12"

# HTTP (hyper ecosystem)
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http = "1.1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# gRPC
tonic = "0.13"
prost = "0.14"
prost-types = "0.14"

# Neo4j Bolt protocol
neo4rs = "0.9.0-rc.9"

# Token decoding (used by llama-cpp-2)
encoding_rs = "0.8"

# Async stream adapters
tokio-stream = "0.1"

# Postgres + pgvector (using tokio-postgres to avoid sqlx's libsqlite3-sys conflict)
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
pgvector = { version = "0.4.1", features = ["postgres"] }

# Testing
tempfile = "3"
proptest = "1"

# ── Build profiles ──────────────────────────────────────────────────────────
#
# `dev` and `test` profiles emit minimal debug info (file:line only). Full
# debug info on the knowledge/storage test binaries pulls in lancedb,
# datafusion, arrow, tantivy, tree-sitter-*, and image processing, and the
# linker OOMs on stock GitHub Actions runners (signal 7, ld bus error).
# Line tables keep panic stack traces readable without the binary-size
# explosion.
#
# Release builds keep the default (full debug). Override per-crate if a
# specific consumer needs richer debug info.

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

# Release profile tuned for FAST compile during functional iteration.
# Keeps the bits that matter for correctness on wasm (overflow-checks
# off, debug-assertions off — both are what make candle's u32 bit
# math NOT trap as `unreachable`). Drops the bits that cost compile
# time but only buy runtime perf:
#   - opt-level = 1 → basic inlining, register alloc; skips LLVM's
#     expensive vectorization / inlining passes
#   - lto = false → no whole-program optimization
#   - codegen-units = 256 → parallel codegen across all CPU cores
# Net effect: ~5× faster cargo/wasm-pack rebuilds; runtime is slower
# (matmuls won't auto-vectorize), but the wasm path is currently
# bound by GPU work + GPU→CPU readback, not Rust hot loops, so the
# user-visible perf hit on the WGPU path is small. Crank back to
# `opt-level = 3 + lto = "fat"` once we ship to production.
[profile.release]
opt-level = 1
lto = false
codegen-units = 256
debug = "line-tables-only"

